fix: fix styles for media queries <=1200px for section.features in index.html

--- a/css/style.css
+++ b/css/style.css
@@ -651,6 +651,9 @@ a {
 .features {
   height: 72.8rem;
   width: 100%; }
+  @media only screen and (max-width: 1200px) {
+    .features {
+      height: 89rem; } }
   .features__blackboard {
     height: 57.7rem;
     width: 100%;
@@ -662,9 +665,13 @@ a {
     align-items: center; }
     @media only screen and (max-width: 1200px) {
       .features__blackboard {
-        padding: 7.1rem 10% 0; } }
+        padding: 6rem 10% 0; } }
   .features__heading, .features__card-heading, .features__card-subheading {
-    color: #fefcf7; }
+    color: #fefcf7;
+    text-align: center; }
+    @media only screen and (max-width: 1200px) {
+      .features__heading, .features__card-heading, .features__card-subheading {
+        text-align: left; } }
   .features__subheading {
     color: #fefcf7;
     opacity: 0.8;
@@ -672,7 +679,9 @@ a {
     margin: 3.2rem 0 8.6rem; }
     @media only screen and (max-width: 1200px) {
       .features__subheading {
-        margin: 2.4rem 0 7rem; } }
+        margin: 2.4rem 0 7rem;
+        width: 94.24%;
+        max-width: 54rem; } }
   .features__list {
     width: 100%;
     display: flex;
@@ -691,8 +700,10 @@ a {
     background-color: #0e8784; }
     @media only screen and (max-width: 1200px) {
       .features__card {
-        width: 57.3rem;
-        padding: 4.1rem 4.8rem !important;
+        height: auto !important;
+        width: 100%;
+        max-width: 57.3rem;
+        padding: 7.16% 8.38% 7.16% 12.22% !important;
         flex-direction: row;
         justify-content: center;
         align-items: center;
@@ -704,6 +715,8 @@ a {
         padding-top: 0; } }
   .features__img {
     width: 7.2rem; }
+  .features__card-description {
+    flex: 1; }
 
 .workflow {
   padding: 20rem 11.72% 20rem 6.64%;
