--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -183,6 +183,10 @@
   height: 72.8rem;
   width: 100%;
 
+  @media only screen and (max-width: 1200px) {
+    height: 89rem;
+  }
+
   &__blackboard {
     height: 57.7rem;
     width: 100%;
@@ -194,7 +198,7 @@
     align-items: center;
 
     @media only screen and (max-width: 1200px) {
-      padding: 7.1rem 10% 0;
+      padding: 6rem 10% 0;
     }
   }
 
@@ -202,6 +206,11 @@
   &__card-heading,
   &__card-subheading {
     color: $color-cream;
+    text-align: center;
+
+    @media only screen and (max-width: 1200px) {
+      text-align: left;
+    }
   }
 
   &__subheading {
@@ -212,6 +221,8 @@
 
     @media only screen and (max-width: 1200px) {
       margin: 2.4rem 0 7rem;
+      width: 94.24%;
+      max-width: 54rem;
     }
   }
 
@@ -236,8 +247,11 @@
     background-color: $color-cyan-dark;
 
     @media only screen and (max-width: 1200px) {
-      width: 57.3rem;
-      padding: 4.1rem 4.8rem !important;
+      height: auto !important;
+      width: 100%;
+      max-width: 57.3rem;
+      // padding: 4.1rem 4.8rem 4.1rem 7rem !important;
+      padding: 7.16% 8.38% 7.16% 12.22% !important;
       flex-direction: row;
       justify-content: center;
       align-items: center;
@@ -255,6 +269,10 @@
 
   &__img {
     width: 7.2rem;
+  }
+
+  &__card-description {
+    flex: 1;
   }
 }
 
