--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -59,8 +59,13 @@
   font-size: 4rem;
   line-height: 4.8rem;
 
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 900px) {
     font-size: 3.2rem;
+  }
+
+  @media only screen and (max-width: 650px) {
+    font-size: 2.8rem;
+    line-height: 2.8rem;
   }
 }
 
