--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -160,7 +160,7 @@
 
   &__card {
     width: 22.97%;
-    
+
     @media only screen and (max-width: 1200px) {
       width: 100%;
       display: flex;
@@ -187,6 +187,10 @@
     height: 89rem;
   }
 
+  @media only screen and (max-width: 650px) {
+    height: 150rem;
+  }
+
   &__blackboard {
     height: 57.7rem;
     width: 100%;
@@ -198,7 +202,11 @@
     align-items: center;
 
     @media only screen and (max-width: 1200px) {
-      padding: 6rem 10% 0;
+      padding: 6.4rem 10% 0;
+    }
+
+    @media only screen and (max-width: 650px) {
+      padding: 6.4rem 7.34% 0;
     }
   }
 
@@ -210,6 +218,10 @@
 
     @media only screen and (max-width: 1200px) {
       text-align: left;
+    }
+
+    @media only screen and (max-width: 550px) {
+      text-align: center;
     }
   }
 
@@ -223,6 +235,12 @@
       margin: 2.4rem 0 7rem;
       width: 94.24%;
       max-width: 54rem;
+    }
+
+    @media only screen and (max-width: 650px) {
+      margin-bottom: 6.4rem;
+      width: 100%;
+      max-width: none;
     }
   }
 
@@ -245,25 +263,39 @@
     border-radius: 0.8rem;
     padding: 7.2rem 4.28% 4.8rem;
     background-color: $color-cyan-dark;
+    gap: 5.6rem;
 
     @media only screen and (max-width: 1200px) {
       height: auto !important;
       width: 100%;
       max-width: 57.3rem;
-      // padding: 4.1rem 4.8rem 4.1rem 7rem !important;
       padding: 7.16% 8.38% 7.16% 12.22% !important;
       flex-direction: row;
       justify-content: center;
       align-items: center;
       gap: 5.5rem;
     }
+
+    @media only screen and (max-width: 550px) {
+      max-width: 28.2rem;
+      flex-direction: column;
+      justify-content: start;
+      align-items: center;
+      gap: 5.6rem;
+      padding: 7.2rem 4.28% 4.8rem !important;
+    }
   }
 
   &__card:nth-child(3) {
     padding-top: 8.3rem;
+    gap: 6.7rem;
 
     @media only screen and (max-width: 1200px) {
       padding-top: 0;
+    }
+
+    @media only screen and (max-width: 550px) {
+      padding-top: 8.3rem;
     }
   }
 
@@ -273,6 +305,18 @@
 
   &__card-description {
     flex: 1;
+
+    @media only screen and (max-width: 550px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
+  &__card-subheading {
+    @media only screen and (max-width: 550px) {
+      width: 76%;
+    }
   }
 }
 
