--- a/css/style.css
+++ b/css/style.css
@@ -672,7 +672,7 @@ a {
     align-items: center; }
     @media only screen and (max-width: 1200px) {
       .features__blackboard {
-        padding: 6.4rem 10% 0; } }
+        padding: 9.3% 10% 0; } }
     @media only screen and (max-width: 650px) {
       .features__blackboard {
         padding: 6.4rem 7.34% 0; } }
@@ -762,6 +762,9 @@ a {
   display: flex;
   flex-direction: column;
   align-items: start; }
+  @media only screen and (max-width: 1200px) {
+    .workflow {
+      padding: 14.4rem 0; } }
   .workflow__heading {
     color: #83888f;
     margin-bottom: 8rem; }
@@ -771,6 +774,9 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center; }
+    @media only screen and (max-width: 1200px) {
+      .workflow__progress {
+        width: 72.13%; } }
   .workflow__circle {
     height: 3.1rem;
     width: 3.1rem;
@@ -786,6 +792,10 @@ a {
         position: absolute;
         top: 50%;
         left: -35.1rem; }
+        @media only screen and (max-width: 1200px) {
+          .workflow__circle:nth-child(2)::before {
+            width: calc((88.89vw * 72.13 / 100 - 9.3rem) / 2);
+            left: calc((88.89vw * 72.13 / 100 - 9.2rem) / -2); } }
       .workflow__circle:nth-child(2)::after {
         content: "";
         height: 2px;
@@ -794,11 +804,19 @@ a {
         position: absolute;
         top: 50%;
         left: calc(100% + 1px); }
+        @media only screen and (max-width: 1200px) {
+          .workflow__circle:nth-child(2)::after {
+            width: calc((88.89vw * 72.13 / 100 - 9.3rem) / 2); } }
   .workflow__description {
     width: 104.5rem;
     margin-bottom: 6.4rem;
     display: flex;
     justify-content: space-between; }
+    @media only screen and (max-width: 1200px) {
+      .workflow__description {
+        width: 100%;
+        margin-bottom: 4.4rem;
+        gap: 1rem; } }
   .workflow__card {
     width: 28.5rem;
     display: flex;
