--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -202,7 +202,7 @@
     align-items: center;
 
     @media only screen and (max-width: 1200px) {
-      padding: 6.4rem 10% 0;
+      padding: 9.3% 10% 0;
     }
 
     @media only screen and (max-width: 650px) {
@@ -326,6 +326,10 @@
   flex-direction: column;
   align-items: start;
 
+  @media only screen and (max-width: 1200px) {
+    padding: 14.4rem 0;
+  }
+
   &__heading {
     color: $color-grey;
     margin-bottom: 8rem;
@@ -337,6 +341,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @media only screen and (max-width: 1200px) {
+      width: 72.13%;
+    }
   }
 
   &__circle {
@@ -356,6 +364,11 @@
         position: absolute;
         top: 50%;
         left: -35.1rem;
+
+        @media only screen and (max-width: 1200px) {
+          width: calc((88.89vw * 72.13 / 100 - 9.3rem) / 2);
+          left: calc((88.89vw * 72.13 / 100 - 9.2rem) / -2);
+        }
       }
 
       &::after {
@@ -366,6 +379,10 @@
         position: absolute;
         top: 50%;
         left: calc(100% + 1px);
+
+        @media only screen and (max-width: 1200px) {
+          width: calc((88.89vw * 72.13 / 100 - 9.3rem) / 2);
+        }
       }
     }
   }
@@ -375,6 +392,12 @@
     margin-bottom: 6.4rem;
     display: flex;
     justify-content: space-between;
+
+    @media only screen and (max-width: 1200px) {
+      width: 100%;
+      margin-bottom: 4.4rem;
+      gap: 1rem;
+    }
   }
 
   &__card {
