--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -73,6 +73,11 @@
   @extend %heading;
   font-size: 3.2rem;
   line-height: 3.6rem;
+
+  @media only screen and (max-width: 900px) {
+    font-size: 2.8rem;
+    line-height: 3.2rem;
+  }
 }
 
 .heading-sm {
@@ -88,7 +93,7 @@
   line-height: 2.6rem;  
   font-weight: 400;
 
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 900px) {
     font-size: 1.5rem;
     line-height: 2.5rem;
   }
