--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -333,6 +333,10 @@
   &__heading {
     color: $color-grey;
     margin-bottom: 8rem;
+
+    @media only screen and (max-width: 900px) {
+      margin-bottom: 4rem;
+    }
   }
 
   &__progress {
@@ -344,6 +348,10 @@
 
     @media only screen and (max-width: 1200px) {
       width: 72.13%;
+    }
+
+    @media only screen and (max-width: 900px) {
+      margin-bottom: 4.8rem;
     }
   }
 
@@ -395,8 +403,11 @@
 
     @media only screen and (max-width: 1200px) {
       width: 100%;
-      margin-bottom: 4.4rem;
       gap: 1rem;
+    }
+
+    @media only screen and (max-width: 900px) {
+      margin-bottom: 4.4rem;
     }
   }
 
@@ -405,16 +416,31 @@
     display: flex;
     flex-direction: column;
     align-items: start;
+
+    @media only screen and (max-width: 900px) {
+      width: calc((100% - 2rem) / 3);
+    }
   }
 
   &__step-number {
     color: $color-orange;
     margin-bottom: 3.8rem;
+    font-size: 7.2rem;
+    line-height: 7.2rem;
+
+    @media only screen and (max-width: 900px) {
+      margin-bottom: 4.2rem;
+    }
   }
 
   &__step-name {
     width: 25.5rem;
     margin-bottom: 4.3rem;
+
+    @media only screen and (max-width: 900px) {
+      margin-bottom: 3.8rem;
+      width: 100%;
+    }
   }
 
   &__step-desc {
