--- a/sass/pages/_about-us.scss
+++ b/sass/pages/_about-us.scss
@@ -1,6 +1,19 @@
 .main-about {
   width: 100%;
   max-width: 128rem;
+
+  @media only screen and (max-width: 1440px) {
+    width: 88.89%;
+    max-width: none;
+  }
+
+  @media only screen and (max-width: 768px) {
+    width: 89.58%;
+  }
+
+  @media only screen and (max-width: 550px) {
+    width: 87.2%;
+  }
 }
 
 .hero-about {
@@ -12,8 +25,18 @@
   background: url("/assets/about/desktop/image-hero-whitecup.jpg"),
     lightgray 0px 0px / 100% 100% no-repeat;
   background-size: cover;
+  background-position: center;
   display: flex;
   align-items: center;
+
+  @media only screen and (max-width: 1100px) {
+    height: 40rem;
+    padding-left: 5.69%;
+  }
+
+  @media only screen and (max-width: 768px) {
+    padding-left: 8.43%;
+  }
 
   &__text-container {
     display: flex;
@@ -23,12 +46,22 @@
 
   &__heading {
     color: $color-cream;
+
+    @media only screen and (max-width: 900px) {
+      font-size: 4.8rem;
+      line-height: 4.8rem;
+    }
   }
 
   &__subheading {
     width: 44.5rem;
     margin-top: 2.4rem;
     color: $color-cream;
+
+    @media only screen and (max-width: 1100px) {
+      width: 57.76%;
+      min-width: 39.8rem;
+    }
   }
 }
 
