--- a/css/style.css
+++ b/css/style.css
@@ -323,6 +323,9 @@ a {
   @media only screen and (max-width: 768px) {
     .hero-about {
       padding-left: 8.43%; } }
+  @media only screen and (max-width: 550px) {
+    .hero-about {
+      padding: 11.1rem 8.6% 8.7rem; } }
   .hero-about__text-container {
     display: flex;
     flex-direction: column;
@@ -333,6 +336,12 @@ a {
       .hero-about__heading {
         font-size: 4.8rem;
         line-height: 4.8rem; } }
+    @media only screen and (max-width: 550px) {
+      .hero-about__heading {
+        font-size: 2.8rem;
+        line-height: 2.8rem;
+        width: 100%;
+        text-align: center; } }
   .hero-about__subheading {
     width: 44.5rem;
     margin-top: 2.4rem;
@@ -341,6 +350,11 @@ a {
       .hero-about__subheading {
         width: 57.76%;
         min-width: 39.8rem; } }
+    @media only screen and (max-width: 550px) {
+      .hero-about__subheading {
+        width: 100%;
+        min-width: 0;
+        text-align: center; } }
 
 .commitment {
   height: 93.2rem;
