--- a/sass/pages/_about-us.scss
+++ b/sass/pages/_about-us.scss
@@ -38,6 +38,10 @@
     padding-left: 8.43%;
   }
 
+  @media only screen and (max-width: 550px) {
+    padding: 11.1rem 8.6% 8.7rem;
+  }
+
   &__text-container {
     display: flex;
     flex-direction: column;
@@ -51,6 +55,13 @@
       font-size: 4.8rem;
       line-height: 4.8rem;
     }
+
+    @media only screen and (max-width: 550px) {
+      font-size: 2.8rem;
+      line-height: 2.8rem;
+      width: 100%;
+      text-align: center;
+    }
   }
 
   &__subheading {
@@ -61,6 +72,12 @@
     @media only screen and (max-width: 1100px) {
       width: 57.76%;
       min-width: 39.8rem;
+    }
+
+    @media only screen and (max-width: 550px) {
+      width: 100%;
+      min-width: 0;
+      text-align: center;
     }
   }
 }
