--- a/css/style.css
+++ b/css/style.css
@@ -362,14 +362,31 @@ a {
   padding: 16.8rem 8.5rem 24.4rem;
   display: flex;
   justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+  gap: 6.9rem; }
+  @media only screen and (max-width: 1200px) {
+    .commitment {
+      height: 75rem;
+      padding: 14.4rem 0 13.6rem; } }
+  @media only screen and (max-width: 1200px) {
+    .commitment__image {
+      width: 42%;
+      height: 47rem;
+      min-width: 28.1rem;
+      object-fit: cover; } }
   .commitment__text-container {
     width: 54rem;
     display: flex;
     flex-direction: column;
     align-items: start; }
+    @media only screen and (max-width: 1200px) {
+      .commitment__text-container {
+        flex: 1; } }
   .commitment__heading {
     margin-bottom: 3.2rem; }
+    @media only screen and (max-width: 900px) {
+      .commitment__heading {
+        margin-bottom: 3rem; } }
   .commitment__description {
     opacity: 0.8;
     width: 100%; }
