--- a/sass/pages/_about-us.scss
+++ b/sass/pages/_about-us.scss
@@ -89,16 +89,39 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 6.9rem;
+
+  @media only screen and (max-width: 1200px) {
+    height: 75rem;
+    padding: 14.4rem 0 13.6rem;
+  }
+
+  &__image {
+    @media only screen and (max-width: 1200px) {
+      width: 42%;
+      height: 47rem;
+      min-width: 28.1rem;
+      object-fit: cover;
+    }
+  }
 
   &__text-container {
     width: 54rem;
     display: flex;
     flex-direction: column;
     align-items: start;
+
+    @media only screen and (max-width: 1200px) {
+      flex: 1;
+    }
   }
 
   &__heading {
     margin-bottom: 3.2rem;
+
+    @media only screen and (max-width: 900px) {
+      margin-bottom: 3rem;
+    }
   }
 
   &__description {
