--- a/css/style.css
+++ b/css/style.css
@@ -368,12 +368,26 @@ a {
     .commitment {
       height: 75rem;
       padding: 14.4rem 0 13.6rem; } }
+  @media only screen and (max-width: 650px) {
+    .commitment {
+      height: 90rem;
+      padding: 12rem 0;
+      flex-direction: column;
+      justify-content: start;
+      gap: 4.8rem; } }
   @media only screen and (max-width: 1200px) {
     .commitment__image {
       width: 42%;
       height: 47rem;
-      min-width: 28.1rem;
+      min-width: 23.5rem;
       object-fit: cover; } }
+  @media only screen and (max-width: 650px) {
+    .commitment__image {
+      width: 100%;
+      min-width: none;
+      height: 40rem;
+      object-fit: cover;
+      border-radius: 0.8rem; } }
   .commitment__text-container {
     width: 54rem;
     display: flex;
@@ -381,15 +395,26 @@ a {
     align-items: start; }
     @media only screen and (max-width: 1200px) {
       .commitment__text-container {
-        flex: 1; } }
+        flex: 5; } }
+    @media only screen and (max-width: 650px) {
+      .commitment__text-container {
+        width: 100%;
+        align-items: center; } }
   .commitment__heading {
     margin-bottom: 3.2rem; }
     @media only screen and (max-width: 900px) {
       .commitment__heading {
         margin-bottom: 3rem; } }
+    @media only screen and (max-width: 650px) {
+      .commitment__heading {
+        font-size: 3.2rem;
+        line-height: 4.8rem; } }
   .commitment__description {
     opacity: 0.8;
     width: 100%; }
+    @media only screen and (max-width: 650px) {
+      .commitment__description {
+        text-align: center; } }
 
 .quality {
   height: 47.4rem;
