--- a/sass/pages/_about-us.scss
+++ b/sass/pages/_about-us.scss
@@ -96,12 +96,28 @@
     padding: 14.4rem 0 13.6rem;
   }
 
+  @media only screen and (max-width: 650px) {
+    height: 90rem;
+    padding: 12rem 0;
+    flex-direction: column;
+    justify-content: start;
+    gap: 4.8rem;
+  }
+
   &__image {
     @media only screen and (max-width: 1200px) {
       width: 42%;
       height: 47rem;
-      min-width: 28.1rem;
+      min-width: 23.5rem;
       object-fit: cover;
+    }
+
+    @media only screen and (max-width: 650px) {
+      width: 100%;
+      min-width: none;
+      height: 40rem;
+      object-fit: cover;
+      border-radius: 0.8rem;
     }
   }
 
@@ -112,7 +128,12 @@
     align-items: start;
 
     @media only screen and (max-width: 1200px) {
-      flex: 1;
+      flex: 5;
+    }
+
+    @media only screen and (max-width: 650px) {
+      width: 100%;
+      align-items: center;
     }
   }
 
@@ -122,11 +143,20 @@
     @media only screen and (max-width: 900px) {
       margin-bottom: 3rem;
     }
+
+    @media only screen and (max-width: 650px) {
+      font-size: 3.2rem;
+      line-height: 4.8rem;
+    }
   }
 
   &__description {
     opacity: 0.8;
     width: 100%;
+
+    @media only screen and (max-width: 650px) {
+      text-align: center;
+    }
   }
 }
 
