--- a/sass/pages/_about-us.scss
+++ b/sass/pages/_about-us.scss
@@ -163,7 +163,7 @@
 .quality {
   height: 47.4rem;
   width: 100%;
-  padding: 10rem 8.5rem 10rem;
+  padding: 10rem 8.5rem;
   background: url("/assets/about/desktop/bg-quality.png"),
     lightgray 0px 0px / 100% 100% no-repeat;
   border-radius: 10px;
@@ -171,24 +171,68 @@
   justify-content: space-between;
   align-items: start;
 
+  @media only screen and (max-width: 1200px) {
+    padding-left: 7.4rem;
+    padding-right: 7.4rem;
+  }
+
+  @media only screen and (max-width: 1000px) {
+    margin-top: 16rem;
+    padding: 0 4.8rem;
+    flex-direction: column-reverse;
+    justify-content: start;
+    align-items: center;
+  }
+
   &__text-container {
-    width: 54rem;
+    width: 48.65%;
+
+    @media only screen and (max-width: 1000px) {
+      position: relative;
+      top: -10.6rem;
+      width: 93%;
+    }
   }
 
   &__heading {
     margin-bottom: 3.2rem;
     color: $color-cream;
+
+    @media only screen and (max-width: 1000px) {
+      text-align: center;
+      margin-bottom: 2.4rem;
+    }
   }
 
   &__description {
     color: $color-cream;
     opacity: 0.8;
     width: 100%;
+
+    @media only screen and (max-width: 1000px) {
+      text-align: center;
+    }
   }
 
   &__image {
     position: relative;
     top: -17.4rem;
+    border-radius: 0.8rem;
+
+    @media only screen and (max-width: 1200px) {
+      top: -14rem;
+      margin-left: 5%;
+      width: 35rem;
+    }
+
+    @media only screen and (max-width: 1000px) {
+      width: 57.3rem;
+      height: 32rem;
+      object-fit: cover;
+      object-position: bottom;
+      top: -16rem;
+      margin-left: 0;
+    }
   }
 }
 
