--- a/css/style.css
+++ b/css/style.css
@@ -370,7 +370,7 @@ a {
       padding: 14.4rem 0 13.6rem; } }
   @media only screen and (max-width: 650px) {
     .commitment {
-      height: 90rem;
+      height: 110rem;
       padding: 12rem 0;
       flex-direction: column;
       justify-content: start;
@@ -439,6 +439,11 @@ a {
   @media only screen and (max-width: 750px) {
     .quality {
       margin-top: 12.7rem; } }
+  @media only screen and (max-width: 550px) {
+    .quality {
+      height: max-content;
+      margin-top: 7.8rem;
+      padding: 0 2.4rem; } }
   .quality__text-container {
     width: 48.65%; }
     @media only screen and (max-width: 1000px) {
@@ -449,6 +454,11 @@ a {
     @media only screen and (max-width: 750px) {
       .quality__text-container {
         top: -6.3rem; } }
+    @media only screen and (max-width: 550px) {
+      .quality__text-container {
+        height: fit-content;
+        top: -3rem;
+        width: 100%; } }
   .quality__heading {
     margin-bottom: 3.2rem;
     color: #fefcf7; }
@@ -485,6 +495,11 @@ a {
         width: 45.4rem;
         height: 25.4rem;
         top: -12.7rem; } }
+    @media only screen and (max-width: 550px) {
+      .quality__image {
+        width: 27.9rem;
+        height: 15.6rem;
+        top: -7.8rem; } }
 
 .contacts {
   padding: 16.8rem 11.72% 16.8rem 6.64%; }
