--- a/sass/pages/_about-us.scss
+++ b/sass/pages/_about-us.scss
@@ -97,7 +97,7 @@
   }
 
   @media only screen and (max-width: 650px) {
-    height: 90rem;
+    height: 110rem;
     padding: 12rem 0;
     flex-direction: column;
     justify-content: start;
@@ -188,6 +188,12 @@
     margin-top: 12.7rem;
   }
 
+  @media only screen and (max-width: 550px) {
+    height: max-content;
+    margin-top: 7.8rem;
+    padding: 0 2.4rem;
+  }
+
   &__text-container {
     width: 48.65%;
 
@@ -199,6 +205,12 @@
 
     @media only screen and (max-width: 750px) {
       top: -6.3rem;
+    }
+
+    @media only screen and (max-width: 550px) {
+      height: fit-content;
+      top: -3rem;
+      width: 100%;
     }
   }
 
@@ -246,6 +258,12 @@
       width: 45.4rem;
       height: 25.4rem;
       top: -12.7rem;
+    }
+
+    @media only screen and (max-width: 550px) {
+      width: 27.9rem;
+      height: 15.6rem;
+      top: -7.8rem;
     }
   }
 }
