--- a/css/style.css
+++ b/css/style.css
@@ -523,8 +523,22 @@ a {
     flex-direction: column;
     justify-content: space-between;
     align-items: start; }
+    @media only screen and (max-width: 900px) {
+      .contacts__location {
+        width: max-content;
+        flex: 1; }
+        .contacts__location:nth-child(1) {
+          flex: 1.2; } }
+  @media only screen and (max-width: 900px) {
+    .contacts__location-data {
+      font-size: 1.6rem;
+      line-height: 2.6rem; } }
   .contacts__location-country {
     margin-bottom: 2.4rem; }
+    @media only screen and (max-width: 900px) {
+      .contacts__location-country {
+        font-size: 2.4rem;
+        margin-bottom: 2.1rem; } }
   .contacts__location-phone:hover {
     text-decoration: underline; }
 
