--- a/sass/pages/_about-us.scss
+++ b/sass/pages/_about-us.scss
@@ -297,10 +297,31 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: start;
+
+    @media only screen and (max-width: 900px) {
+      width: max-content;
+      flex: 1;
+
+      &:nth-child(1) {
+        flex: 1.2;
+      }
+    }
+  }
+
+  &__location-data {
+    @media only screen and (max-width: 900px) {
+      font-size: 1.6rem;
+      line-height: 2.6rem;
+    }
   }
 
   &__location-country {
     margin-bottom: 2.4rem;
+
+    @media only screen and (max-width: 900px) {
+      font-size: 2.4rem;
+      margin-bottom: 2.1rem;
+    }
   }
 
   &__location-phone {
