--- a/sass/pages/_about-us.scss
+++ b/sass/pages/_about-us.scss
@@ -275,6 +275,14 @@
     padding: 14.4rem 0;
   }
 
+  @media only screen and (max-width: 650px) {
+    padding: 12rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+  }
+
   &__heading {
     color: $color-grey;
     margin-bottom: 7.2rem;
@@ -287,6 +295,13 @@
 
     @media only screen and (max-width: 1200px) {
       gap: 1rem;
+    }
+
+    @media only screen and (max-width: 650px) {
+      flex-direction: column;
+      justify-content: start;
+      align-items: center;
+      gap: 8rem;
     }
   }
 
@@ -306,12 +321,26 @@
         flex: 1.2;
       }
     }
+
+    @media only screen and (max-width: 650px) {
+      width: 100%;
+      flex: none;
+      align-items: center;
+
+      &:nth-child(1) {
+        flex: none;
+      }
+    }
   }
 
   &__location-data {
     @media only screen and (max-width: 900px) {
       font-size: 1.6rem;
       line-height: 2.6rem;
+    }
+
+    @media only screen and (max-width: 650px) {
+      text-align: center;
     }
   }
 
@@ -321,6 +350,11 @@
     @media only screen and (max-width: 900px) {
       font-size: 2.4rem;
       margin-bottom: 2.1rem;
+    }
+
+    @media only screen and (max-width: 650px) {
+      text-align: center;
+      margin-bottom: 2.2rem;
     }
   }
 
